docs(contrib): finish Phase C cutover — slim README + NON_GRADLE_INTEGRATION (#1319)